--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kanji-heatmap",
   "private": true,
   "version": "0.0.0",
+  "engines": { "node": ">=20.19.5" },
   "type": "module",
   "scripts": {
     "dev": "vite",
